<?xml version='1.0' encoding='utf-8'?>
<resources>
    <string name="app_name">HideScore</string>
    <string name="title_activity_main">HideScore</string>
    <string name="package_name">com.jacobhl.hidescore</string>
    <string name="custom_url_scheme">com.jacobhl.hidescore</string>
    <string name="widget_title">HideScore</string>
    <string name="widget_refresh">Refresh</string>
    <string name="widget_monkey" translatable="false">🙈</string>
    <string name="widget_at" translatable="false">\@</string>
    <string name="widget_prev">Previous game</string>
    <string name="widget_next">Next game</string>
    <string name="widget_prev_arrow" translatable="false">‹</string>
    <string name="widget_next_arrow" translatable="false">›</string>
    <string name="widget_description">Upcoming games for your favorite teams. Never shows a score.</string>
</resources>
